--- a/src/themes/default/ids-theme-default-core.scss
+++ b/src/themes/default/ids-theme-default-core.scss
@@ -963,10 +963,10 @@
 
   // Module Nav Switcher (Role Dropdown + Button)
   --ids-module-nav-switcher-button-size: 40px;
-  --ids-module-nav-switcher-button-gutter-size: 8px;
+  --ids-module-nav-switcher-button-gutter-size: 6px;
   --ids-module-nav-switcher-button-icon-margin: 2px;
   --ids-module-nav-switcher-dropdown-height: 40px;
-  --ids-module-nav-switcher-dropdown-width: 256px;
+  --ids-module-nav-switcher-dropdown-width: 260px;
   --ids-module-nav-switcher-dropdown-item-height: 48px;
   --ids-module-nav-switcher-dropdown-item-focus-bg-color: var(--ids-color-slate-20);
   --ids-module-nav-switcher-dropdown-item-text-color: var(--ids-color-slate-60);
